Allow additional JVM args when running tests via toolchain
See gh-26767